--- a/home.html
+++ b/home.html
@@ -82,7 +82,7 @@
   <script type="text/javascript">
 
 
-    $.getJSON( "./py_scripts/stravagoog_route_data.json", function(py_data){
+    $.getJSON( "https://raw.githubusercontent.com/soulcrafty/race_to_space_needle/master/py_scripts/stravagoog_route_data.json", function(py_data){
       init_model(py_data)     
     });
 
